# py_window_snap

./: .gitignore  LICENSE  README.md  development.md  instructions.md
.github/: AGENTS.md  copilot-instructions.md
.github/workflows/: release.yml
docs/: _config.yml  changelog.md  index.md  installation.md  usage.md
src/: README.md  pyproject.toml
src/docs/: index.md  usage.md
src/window_snap/: __init__.py  __main__.py  _conf.py  _win32_helpers.py  win32_helpers.py
