[project]
name = "window_snap"
version = "0.1.3-alpha.0"
description = "Snap windows to their configured positions"
authors = [
    {name = "Maker By Night",email = "2565361+mshafer1@users.noreply.github.com"}
]
license = "MIT"
requires-python = ">=3.11,<4"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
]
readme = "../README.md"

[tool.poetry.dependencies]
pyyaml = "^6.0.3"
click = "^8.4.1"
python-decouple = "^3.8"
screeninfo = "^0.8.1"
pywin32 = "^312"

[tool.poetry.scripts]
window-snap = "window_snap.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ni-python-styleguide (>=0.5.0,<0.6.0)",
    "flake8-logging (>=1.8.0,<2.0.0)"
]
