[project]
name = "window_snap"
version = "0.3.1a0"
description = "Snap windows to their configured positions"
authors = [
    {name = "Maker By Night",email = "2565361+mshafer1@users.noreply.github.com"}
]
license = "MIT"
requires-python = ">=3.11,<4"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
]
readme = "README.md"

[project.urls]
repository = "https://github.com/mshafer1/py_window_snap"
homepage = "https://mshafer1.github.io/py_window_snap/"
changelog = "https://mshafer1.github.io/py_window_snap/changelog.html"

[tool.poetry.dependencies]
pyyaml = "^6.0.3"
click = "^8.4.1"
python-decouple = "^3.8"
screeninfo = "^0.8.1"
pywin32 = "^312"

[project.scripts]
window-snap = "window_snap.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ni-python-styleguide (>=0.5.0,<0.6.0)",
    "flake8-logging (>=1.8.0,<2.0.0)",
    "poethepoet (>=0.46.0,<0.47.0)"
]

[tool.poe.tasks]
format = "poetry run ni-python-styleguide format"
lint = "poetry run ni-python-styleguide lint"
check = "poetry check --lock"
build = "poetry build"
all = [
   "format", "lint", "check", "build"
]